Update final task a aaaa.ipynb

--- a/final task a aaaa.ipynb
+++ b/final task a aaaa.ipynb
@@ -1183,7 +1183,7 @@
    "outputs": [],
    "source": [
     "# Step 5. Apply a Standard Scaler over the Features of the Training Set (Fit and Transform).\n",
-    "# Use your fitted scaler over the Test Data.\n",
+    "# Use  fitted scaler over the Test Data.\n",
     "# Remember Fit and Transform on the Training Set and Transform Only on the Test Set.\n",
     "\n",
     "# Scale the features using StandardScaler\n",
