--- a/final task a aaaa.ipynb
+++ b/final task a aaaa.ipynb
@@ -26,7 +26,7 @@
     "import numpy as np\n",
     "\n",
     "\n",
-    "# Step 1. Load the data and store it in a pandas DataFrame \n",
+    "# Step 1. Load the data and store it \n",
     "df = pd.read_csv(\"ICM317_Report_DataSet_2000Rows.csv\")\n"
    ]
   },
